--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -92,7 +92,7 @@
         android:layout_width="0dp"
     android:layout_height="wrap_content"
     android:layout_marginTop="60dp"
-    android:background="@drawable/bordes"
+    android:background="@drawable/oval_button"
     android:text="INGRESAR"
     android:textColor="#FFFFFF"
     app:layout_constraintEnd_toEndOf="parent"
@@ -103,7 +103,7 @@
         android:layout_width="0dp"
     android:layout_height="wrap_content"
     android:layout_marginTop="52dp"
-    android:background="@drawable/bordes"
+    android:background="@drawable/oval_button"
     android:text="REGISTRARSE"
     android:textColor="#FFFFFF"
     app:layout_constraintEnd_toEndOf="parent"
