--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,19 +6,19 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/fondoapp"
-    tools:context=".MainActivity">
+    tools:context=".LoginActivity">
 
     <TextView
         android:id="@+id/Titulo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="64dp"
-        android:shadowColor="#FFFFFF"
-        android:shadowDx="1"
-        android:shadowDy="1"
-        android:shadowRadius="1.5"
+        android:shadowColor="#000000"
+        android:shadowDx="9"
+        android:shadowDy="9"
+        android:shadowRadius="1.7"
         android:text="TIENDA DE TODITO"
-        android:textColor="#000000"
+        android:textColor="#FFFFFF"
         android:textSize="32sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -29,13 +29,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="64dp"
-        android:shadowColor="#FFFFFF"
-        android:shadowDx="1"
-        android:shadowDy="1"
-        android:shadowRadius="1.5"
-        android:text="USUARIO"
+        android:shadowColor="#000000"
+        android:shadowDx="9"
+        android:shadowDy="9"
+        android:shadowRadius="1.7"
+        android:text="CORREO"
         android:textSize="22sp"
-        android:textColor="#000000"
+        android:textColor="#FFFFFF"
         app:layout_constraintEnd_toEndOf="@id/Titulo"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="@id/Titulo"
@@ -61,11 +61,11 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:text="CONTRASEÑA"
-        android:textColor="#000000"
-        android:shadowColor="#FFFFFF"
-        android:shadowDx="1"
-        android:shadowDy="1"
-        android:shadowRadius="1.5"
+        android:textColor="#FFFFFF"
+        android:shadowColor="#000000"
+        android:shadowDx="9"
+        android:shadowDy="9"
+        android:shadowRadius="1.7"
         android:textSize="22sp"
         app:layout_constraintBottom_toTopOf="@id/editTextTextPassword"
         app:layout_constraintEnd_toEndOf="parent"
@@ -89,24 +89,40 @@
 
     <Button
         android:id="@+id/buttoningresar"
-        android:layout_width="0dp"
-    android:layout_height="wrap_content"
-    android:layout_marginTop="60dp"
-    android:background="@drawable/oval_button"
-    android:text="INGRESAR"
-    android:textColor="#FFFFFF"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@id/editTextTextPassword" />
+        android:layout_width="307dp"
+        android:layout_height="39dp"
+        android:layout_marginTop="60dp"
+        android:backgroundTint="#0049ca"
+        android:text="INGRESAR"
+        android:textColor="#FFFFFF"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/editTextTextPassword" />
+
     <Button
         android:id="@+id/button_registrarse"
-        android:layout_width="0dp"
-    android:layout_height="wrap_content"
-    android:layout_marginTop="52dp"
-    android:background="@drawable/oval_button"
-    android:text="REGISTRARSE"
-    android:textColor="#FFFFFF"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@id/buttoningresar" />
+        android:layout_width="238dp"
+        android:layout_height="37dp"
+        android:layout_marginTop="52dp"
+        android:backgroundTint="#0049ca"
+        android:text="REGISTRARSE"
+        android:textColor="#FFFFFF"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/buttoningresar" />
+
+    <Button
+        android:id="@+id/button_google_sign_in"
+        android:layout_width="261dp"
+        android:layout_height="57dp"
+        android:layout_marginTop="140dp"
+        android:backgroundTint="#ffffff"
+        android:drawableLeft="@drawable/google_icon"
+        android:drawablePadding="8dp"
+        android:text="INGRESAR CON GOOGLE"
+        android:textColor="#000000"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/buttoningresar" />
 </androidx.constraintlayout.widget.ConstraintLayout>
