--- a/app/src/main/res/layout/activity_product_list.xml
+++ b/app/src/main/res/layout/activity_product_list.xml
@@ -16,22 +16,22 @@
         android:layout_margin="16dp"
         android:layout_marginStart="24dp"
         android:layout_marginTop="36dp"
-        android:background="@drawable/oval_button"
+        android:backgroundTint="@color/blue_button"
         android:padding="8dp"
-        android:text="Atrás"
+        android:text="Cerrar seion"
         android:textColor="#000000"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/logo"
-        android:layout_width="138dp"
-        android:layout_height="120dp"
+        android:layout_width="122dp"
+        android:layout_height="132dp"
         android:contentDescription="Logo"
         android:src="@drawable/logo"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/button_carrito"
-        app:layout_constraintHorizontal_bias="0.46"
+        app:layout_constraintHorizontal_bias="0.348"
         app:layout_constraintStart_toEndOf="@id/button_atras"
         app:layout_constraintTop_toBottomOf="@id/button_atras"
         app:layout_constraintVertical_bias="0.0" />
@@ -41,7 +41,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
-        android:background="@drawable/oval_button"
+        android:backgroundTint="@color/blue_button"
         android:padding="8dp"
         android:text="Carrito"
         android:textColor="#000000"
@@ -55,20 +55,23 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
-        android:layout_marginTop="32dp"
         android:background="@drawable/border_black"
+
         android:gravity="center"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
+        tools:layout_editor_absoluteY="215dp"
         app:layout_constraintTop_toBottomOf="@id/logo">
 
-        <LinearLayout
+
+    <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:background="@drawable/border_black"
+
             android:gravity="center"
             android:orientation="vertical"
             android:padding="8dp">
@@ -84,7 +87,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:background="@drawable/oval_button"
+                android:backgroundTint="@color/blue_button"
                 android:padding="8dp"
                 android:text="Detalles"
                 android:textColor="#000000" />
@@ -94,7 +97,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
-                android:background="@drawable/oval_button"
+                android:backgroundTint="@color/blue_button"
                 android:padding="8dp"
                 android:text="Comparar"
                 android:textColor="#000000" />
@@ -103,6 +106,7 @@
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+
             android:layout_weight="1"
             android:background="@drawable/border_black"
             android:gravity="center"
@@ -120,7 +124,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:background="@drawable/oval_button"
+                android:backgroundTint="@color/blue_button"
                 android:padding="8dp"
                 android:text="Detalles"
                 android:textColor="#000000" />
@@ -130,7 +134,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
-                android:background="@drawable/oval_button"
+                android:backgroundTint="@color/blue_button"
                 android:padding="8dp"
                 android:text="Comparar"
                 android:textColor="#000000" />
@@ -169,7 +173,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:background="@drawable/oval_button"
+                android:backgroundTint="@color/blue_button"
                 android:padding="8dp"
                 android:text="Detalles"
                 android:textColor="#000000" />
@@ -179,7 +183,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
-                android:background="@drawable/oval_button"
+                android:backgroundTint="@color/blue_button"
                 android:padding="8dp"
                 android:text="Comparar"
                 android:textColor="#000000" />
@@ -205,7 +209,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:background="@drawable/oval_button"
+                android:backgroundTint="@color/blue_button"
                 android:padding="8dp"
                 android:text="Detalles"
                 android:textColor="#000000" />
@@ -215,7 +219,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
-                android:background="@drawable/oval_button"
+                android:backgroundTint="@color/blue_button"
                 android:padding="8dp"
                 android:text="Comparar"
                 android:textColor="#000000" />
