--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -14,8 +14,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
-        android:backgroundTint="@null"
-        android:background="@drawable/oval_button"
+
+        android:backgroundTint="@color/blue_button"
         android:padding="8dp"
         android:text="Atrás"
         android:textColor="#000000"
@@ -51,62 +51,78 @@
                 android:id="@+id/editTextNombre"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="12dp"
+                android:background="#ffffff"
+                android:textColor="#000000"
                 android:hint="Nombre"
                 android:inputType="textPersonName"
-                android:padding="12dp"
-                android:background="#ffffff"
-                android:layout_marginBottom="12dp" />
+                android:padding="12dp" />
 
             <!-- Campo de Correo -->
             <EditText
                 android:id="@+id/editTextCorreo"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="12dp"
+                android:background="#ffffff"
+                android:textColor="#000000"
                 android:hint="Correo"
                 android:inputType="textEmailAddress"
-                android:padding="12dp"
-                android:background="#ffffff"
-                android:layout_marginBottom="12dp" />
+                android:padding="12dp" />
 
             <!-- Campo de Ciudad -->
             <EditText
                 android:id="@+id/editTextCiudad"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="12dp"
+                android:background="#ffffff"
+                android:textColor="#000000"
                 android:hint="Ciudad"
                 android:inputType="text"
-                android:padding="12dp"
-                android:background="#ffffff"
-                android:layout_marginBottom="12dp" />
+                android:padding="12dp" />
 
             <!-- Campo de Dirección -->
             <EditText
                 android:id="@+id/editTextDireccion"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="12dp"
+                android:background="#ffffff"
+                android:textColor="#000000"
                 android:hint="Dirección"
                 android:inputType="textPostalAddress"
-                android:padding="12dp"
-                android:background="#ffffff"
-                android:layout_marginBottom="12dp" />
+                android:padding="12dp" />
 
             <!-- Campo de Identificación -->
             <EditText
                 android:id="@+id/editTextIdentificacion"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="12dp"
+                android:background="#ffffff"
+                android:textColor="#000000"
                 android:hint="Identificación"
                 android:inputType="number"
-                android:padding="12dp"
+                android:padding="12dp" />
+
+            <EditText
+                android:id="@+id/Textpassword"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="12dp"
                 android:background="#ffffff"
-                android:layout_marginBottom="12dp" />
+                android:textColor="#000000"
+                android:hint="Contraseña"
+                android:inputType="textPassword"
+                android:padding="12dp" />
 
             <!-- Botón de Registro -->
             <Button
                 android:id="@+id/buttonRegistrar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/oval_button"
+                android:backgroundTint="#0049ca"
                 android:padding="12dp"
                 android:text="Registrar"
                 android:textAllCaps="true"
@@ -114,5 +130,45 @@
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
+
+    <Button
+        android:id="@+id/Camarabutton"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:text="Camara"
+        android:textColor="#000000"
+        android:backgroundTint="#808080"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    android:layout_marginTop="16dp" />
+
+    <ImageView
+        android:id="@+id/imagen"
+        android:layout_width="154dp"
+        android:layout_height="138dp"
+        android:layout_marginBottom="16dp"
+        android:layout_gravity="center_horizontal"
+        android:scaleType="centerCrop"
+        android:padding="8dp"
+        android:backgroundTint="#000000"
+    android:layout_marginTop="16dp"
+    app:layout_constraintTop_toTopOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/button_usuarios"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+
+        android:backgroundTint="@color/blue_button"
+        android:padding="8dp"
+        android:text="Ver Usuarios"
+        android:textColor="#000000"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
