--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,6 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="blue_button">#0054fb</color>
+    <color name="blue_button">#3574e0</color>
     <color name="login">#f5f578</color>
 </resources>
